# scene

./: CMakeLists.txt  README.md
include/: BitBlt.h  BrightnessData.h  ColorBalanceData.h  ContrastData.h  Document.h  FileManager.h  History.h  ImageEffect.h  ImageTranscoder.h  RadialBlurPattern.h  Thumbnails_1.h  UIBulge.h  UIButtonWithBorderOnHover.h  UIButtonWithMenu.h  UIButtonWithThumbnail.h  UIComMenu.h  UIComplexP.h  UIComplexS.h  UICurve.h  UIDAddNoise.h  UIDAutoContrast.h  UIDBlur.h  UIDBulge.h  UIDBump.h  UIDChannelMixer.h  UIDClose.h  UIDColorBalance.h  UIDCommon.h  UIDContBright.h  UIDCrystalize.h  UIDCurves.h  UIDDesaturate.h  UIDDespeckle.h  UIDEffect.h  UIDGain.h  UIDGaussianBlur.h  UIDGlow.h  UIDGussianBlur.h  UIDHSL.h  UIDHiddenEffect.h  (+48 more)
src/: BitBlt.cpp  Curve.cpp  Document.cpp  DoneFilters.cpp  DoneFilters2.cpp  FileManager.cpp  History.cpp  ImageEffect.cpp  ImageEffectStructs.cpp  ImageTranscoder.cpp  UIBulge.cpp  UIButtonWithBorderOnHover.cpp  UIButtonWithMenu.cpp  UIButtonWithThumbnail.cpp  UIComMenu.cpp  UIComplexP.cpp  UIComplexS.cpp  UICurve.cpp  UIDAddNoise.cpp  UIDAutoContrast.cpp  UIDBlur.cpp  UIDBulge.cpp  UIDBump.cpp  UIDChannelMixer.cpp  UIDClose.cpp  UIDColorBalance.cpp  UIDCommon.cpp  UIDContBright.cpp  UIDCrystalize.cpp  UIDCurves.cpp  UIDDesaturate.cpp  UIDDespeckle.cpp  UIDEffect.cpp  UIDGain.cpp  UIDGaussianBlur.cpp  UIDGlow.cpp  UIDHSL.cpp  UIDHiddenEffect.cpp  UIDLevels.cpp  UIDMarble.cpp  (+39 more)
src/Done/: Curve.cpp  UIBulge.cpp  UIDAddNoise.cpp  UIDBulge.cpp  UIDChannelMixer.cpp  UIDColorBalance.cpp  UIDContBright.cpp  UIDCrystalize.cpp  UIDCurves.cpp  UIDDespeckle.cpp  UIDGain.cpp  UIDGlow.cpp  UIDGussianBlur.cpp  UIDHSL.cpp  UIDLevels.cpp  UIDMarble.cpp  UIDMedian.cpp  UIDMotionBlur.cpp  UIDOldPaint.cpp  UIDOutline.cpp  UIDPencilSketch.cpp  UIDPixelate.cpp  UIDPosterize.cpp  UIDRadialBlur.cpp  UIDRandomJitter.cpp  UIDRipple.cpp  UIDSmartBlur.cpp  (+10 more)
(+36 files in other folders)
